// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Affix 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <span aria-hidden="true">
      NOK
    </span>
    <input
      id="<removed>"
      inputmode="numeric"
      type="text"
    >
    <span aria-hidden="true">
      pr. mnd
    </span>
  </div>
</ds-field>
`;

exports[`Controlled 1`] = `
<div style="<removed>">
  <ds-field style="<removed>">
    <label
      data-weight="medium"
      for="<removed>"
    >
      Fullt navn
    </label>
    <div>
      <input
        id="<removed>"
        type="text"
        value
      >
    </div>
  </ds-field>
  <button
    data-variant="secondary"
    type="button"
  >
    Tøm feltet
  </button>
</div>
`;

exports[`Counter 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Legg til en beskrivelse
  </label>
  <div>
    <textarea
      id="<removed>"
      rows="4"
      aria-describedby="<removed>"
      style="<removed>"
    >
    </textarea>
  </div>
  <p
    data-field="counter"
    data-limit="75"
    id="<removed>"
    data-label="75 tegn igjen"
    data-state="under"
  >
  </p>
</ds-field>
`;

exports[`Disabled 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Disabled Textfield
  </label>
  <div>
    <input
      id="<removed>"
      disabled
      type="text"
    >
  </div>
</ds-field>
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Disabled multiline Textfield
  </label>
  <div>
    <textarea
      id="<removed>"
      rows="4"
      disabled
      style="<removed>"
    >
    </textarea>
  </div>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Label
  </label>
  <div>
    <input
      id="<removed>"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Format 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Fødselsnummer
  </label>
  <div>
    <input
      id="<removed>"
      inputmode="numeric"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Label
  </label>
  <div>
    <input
      id="<removed>"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    ReadOnly Textfield
  </label>
  <div>
    <input
      id="<removed>"
      readonly
      type="text"
    >
  </div>
</ds-field>
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    ReadOnly multiline Textfield
  </label>
  <div>
    <textarea
      id="<removed>"
      rows="4"
      readonly
      style="<removed>"
    >
    </textarea>
  </div>
</ds-field>
`;

exports[`Rows 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Beskrivelse
  </label>
  <div>
    <textarea
      rows="4"
      id="<removed>"
      style="<removed>"
    >
    </textarea>
  </div>
</ds-field>
`;
